feat: all authorization, refactors
