# controllers/v1/auth.go
@@ -13,6 +13,16 @@ import (
 	"github.com/kalleriakronos24/booklap-be/services"
 )
 
+// AuthLogin godoc
+// @Summary      Global Sign-In
+// @Description  A Global authentication sign-in method for all microservices
+// @Tags         Authentication
+// @Accept       json
+// @Produce      json
+// @Success      200 {object}	dto.Response
+// @Failure      400 {object}	dto.Response
+// @Param 		 data body dto.UserLogin true "global login"
+// @Router       /auth/signin [post]
 func POSTLogin(c *gin.Context) {
 	var err error
 	var p dto.UserLogin
@@ -28,13 +38,23 @@ func POSTLogin(c *gin.Context) {
 
 	var token string
 	if token, err = services.Handler.AuthenticateUser(p); err != nil {
-		c.JSON(http.StatusNotFound, constants.GetErrorResponse("logical", err, "Incorrect username or password. Please try again"))
+		c.JSON(http.StatusNotFound, constants.GetErrorResponse("logical", err, "Incorrect email or password. Please try again"))
 		return
 	}
 
 	c.JSON(http.StatusOK, dto.Response{Data: token})
 }
 
+// AuthSignup godoc
+// @Summary      User Sign-Up
+// @Description  User Sign-Up to store them into global database
+// @Tags         Authentication
+// @Accept       json
+// @Produce      json
+// @Success      200 {object}	dto.Response
+// @Failure      400 {object}	dto.Response
+// @Param 	 	 data body dto.UserSignup true "user registration"
+// @Router       /auth/signup [post]
 func POSTRegister(c *gin.Context) {
 	var err error
 
@@ -72,10 +92,20 @@ func POSTRegister(c *gin.Context) {
 	c.JSON(http.StatusCreated, dto.Response{Data: "success"})
 }
 
-func POSTRegisterSuperAdmin(c *gin.Context) {
+// AuthSignUp godoc
+// @Summary      Internal Sign-Up
+// @Description  Internal Sign-Up
+// @Tags         Authentication
+// @Accept       json
+// @Produce      json
+// @Success      200 {object}	dto.Response
+// @Failure      400 {object}	dto.Response
+// @Param 	 	 data body dto.InternalSignUp true "internal registration"
+// @Router       /auth/i/signup [post]
+func POSTRegisterInternal(c *gin.Context) {
 	var err error
 
-	var p dto.UserSignupSuperAdmin
+	var p dto.InternalSignUp
 	if err = c.ShouldBindJSON(&p); err != nil {
 		c.JSON(http.StatusBadRequest, constants.GetErrorResponse("payload-error", err, ""))
 		return
@@ -93,23 +123,29 @@ func POSTRegisterSuperAdmin(c *gin.Context) {
 		return
 	}
 
-	if err = services.Handler.RegisterUserSuperAdmin(p); err != nil {
+	if err = services.Handler.RegisterInternal(p); err != nil {
 		c.JSON(http.StatusBadRequest, constants.GetErrorResponse("insert-failed", err, "user"))
 		return
 	}
 	c.JSON(http.StatusCreated, dto.Response{Data: "success"})
 }
 
-/*
-==== Tentant Register
-*/
+// TENANT SIGN-UP
+
+// AuthSignup godoc
+// @Summary      Owner Sign-Up
+// @Description  Owner Sign-Up to store them into global database
+// @Tags         Authentication
+// @Accept       json
+// @Produce      json
+// @Success      200 {object}	dto.Response
+// @Failure      400 {object}	dto.Response
+// @Param 	 	 data body dto.OwnerSignup true "owner registration"
+// @Router       /auth/t/signup [post]
 func POSTRegisterBusinessOwner(c *gin.Context) {
 	var err error
 
-	userLoggedInId := c.GetString("user_id")
-	userId, _ := uuid.Parse(userLoggedInId)
-
-	p := &dto.UserSignup{CreatedBy: userId}
+	p := &dto.OwnerSignup{}
 
 	if err = c.ShouldBindJSON(&p); err != nil {
 		c.JSON(http.StatusBadRequest, constants.GetErrorResponse("payload-error", err, ""))
@@ -133,20 +169,27 @@ func POSTRegisterBusinessOwner(c *gin.Context) {
 		return
 	}
 
-	if err = services.Handler.RegisterUser(p); err != nil {
+	if err = services.Handler.RegisterOwner(p); err != nil {
 		c.JSON(http.StatusBadRequest, constants.GetErrorResponse("insert-failed", err, "user"))
 		return
 	}
 	c.JSON(http.StatusCreated, dto.Response{Data: "success"})
 }
 
+// AuthSignup godoc
+// @Summary      Admin Sign-Up
+// @Description  Admin Sign-Up to store them into global database
+// @Tags         Authentication
+// @Accept       json
+// @Produce      json
+// @Success      200 {object}	dto.Response
+// @Failure      400 {object}	dto.Response
+// @Param 	 	 data body dto.AdminSignup true "admin registration"
+// @Router       /auth/t/signup/admin [post]
 func POSTRegisterBusinessAdmin(c *gin.Context) {
 	var err error
 
-	userLoggedInId := c.GetString("user_id")
-	userId, _ := uuid.Parse(userLoggedInId)
-
-	p := &dto.UserSignup{CreatedBy: userId}
+	p := &dto.AdminSignup{}
 
 	if err = c.ShouldBindJSON(&p); err != nil {
 		c.JSON(http.StatusBadRequest, constants.GetErrorResponse("payload-error", err, ""))
@@ -170,24 +213,17 @@ func POSTRegisterBusinessAdmin(c *gin.Context) {
 		return
 	}
 
-	if err = services.Handler.RegisterUser(p); err != nil {
+	if err = services.Handler.RegisterAdmin(p); err != nil {
 		c.JSON(http.StatusBadRequest, constants.GetErrorResponse("insert-failed", err, "user"))
 		return
 	}
 	c.JSON(http.StatusCreated, dto.Response{Data: "success"})
 }
 
-/*
-==== Tentant Login
-*/
+// TENTANT SIGN-IN
 func POSTLoginBusinessOwner(c *gin.Context) {
 	var err error
-
-	userLoggedInId := c.GetString("user_id")
-	userId, _ := uuid.Parse(userLoggedInId)
-
-	p := &dto.UserSignup{CreatedBy: userId}
-
+	var p dto.UserLogin
 	if err = c.ShouldBindJSON(&p); err != nil {
 		c.JSON(http.StatusBadRequest, constants.GetErrorResponse("payload-error", err, ""))
 		return
@@ -198,32 +234,17 @@ func POSTLoginBusinessOwner(c *gin.Context) {
 		return
 	}
 
-	if err := utils.EmailFormatValidation(p.Email); err != nil {
-		c.JSON(http.StatusBadRequest, constants.GetErrorResponse("logical", err, "Invalid email format"))
+	var token string
+	if token, err = services.Handler.AuthenticateUser(p); err != nil {
+		c.JSON(http.StatusNotFound, constants.GetErrorResponse("logical", err, "Incorrect username or password. Please try again"))
 		return
 	}
 
-	if err := services.Handler.CheckExistingUser("", struct{ *masterModels.User }{&masterModels.User{
-		Email: p.Email,
-	}}); err == nil {
-		c.JSON(http.StatusBadRequest, constants.GetErrorResponse("data-existing-email", err, ""))
-		return
-	}
-
-	if err = services.Handler.RegisterUser(p); err != nil {
-		c.JSON(http.StatusBadRequest, constants.GetErrorResponse("insert-failed", err, "user"))
-		return
-	}
-	c.JSON(http.StatusCreated, dto.Response{Data: "success"})
+	c.JSON(http.StatusOK, dto.Response{Data: token})
 }
 func POSTLoginBusinessAdmin(c *gin.Context) {
 	var err error
-
-	userLoggedInId := c.GetString("user_id")
-	userId, _ := uuid.Parse(userLoggedInId)
-
-	p := &dto.UserSignup{CreatedBy: userId}
-
+	var p dto.UserLogin
 	if err = c.ShouldBindJSON(&p); err != nil {
 		c.JSON(http.StatusBadRequest, constants.GetErrorResponse("payload-error", err, ""))
 		return
@@ -234,21 +255,11 @@ func POSTLoginBusinessAdmin(c *gin.Context) {
 		return
 	}
 
-	if err := utils.EmailFormatValidation(p.Email); err != nil {
-		c.JSON(http.StatusBadRequest, constants.GetErrorResponse("logical", err, "Invalid email format"))
+	var token string
+	if token, err = services.Handler.AuthenticateUser(p); err != nil {
+		c.JSON(http.StatusNotFound, constants.GetErrorResponse("logical", err, "Incorrect username or password. Please try again"))
 		return
 	}
 
-	if err := services.Handler.CheckExistingUser("", struct{ *masterModels.User }{&masterModels.User{
-		Email: p.Email,
-	}}); err == nil {
-		c.JSON(http.StatusBadRequest, constants.GetErrorResponse("data-existing-email", err, ""))
-		return
-	}
-
-	if err = services.Handler.RegisterUser(p); err != nil {
-		c.JSON(http.StatusBadRequest, constants.GetErrorResponse("insert-failed", err, "user"))
-		return
-	}
-	c.JSON(http.StatusCreated, dto.Response{Data: "success"})
+	c.JSON(http.StatusOK, dto.Response{Data: token})
 }
