# dto/user.go
@@ -2,50 +2,68 @@ package dto
 
 import (
 	"github.com/google/uuid"
-	models "github.com/kalleriakronos24/booklap-be/models/master"
 )
 
 type UserLogin struct {
-	Username string `json:"username" validate:"required"`
+	Email    string `json:"email" validate:"required"`
 	Password string `json:"password" validate:"required"`
 }
 
+// PUBLIC
 type UserSignup struct {
 	Name      string `json:"name" validate:"required"`
 	Address   string `json:"address"`
 	Username  string `json:"username" validate:"required"`
 	Email     string `json:"email,omitempty" validate:"required,email"`
 	Password  string `json:"password" validate:"required"`
-	Role      string `json:"role" validate:"required"`
-	CompanyID string `json:"companyId" binding:"required" validate:"required,uuid4"`
 	CreatedBy uuid.UUID
 }
 
-type UserSignupSuperAdmin struct {
-	Name     string `json:"name" validate:"required"`
-	Address  string `json:"address"`
-	Username string `json:"username" validate:"required"`
-	Email    string `json:"email" validate:"required,email"`
-	Password string `json:"password" validate:"required"`
+// TENANT
+type OwnerSignup struct {
+	Name      string `json:"name" validate:"required"`
+	Address   string `json:"address"`
+	Username  string `json:"username" validate:"required"`
+	Email     string `json:"email,omitempty" validate:"required,email"`
+	Password  string `json:"password" validate:"required"`
+	CreatedBy uuid.UUID
+}
+type AdminSignup struct {
+	Name      string `json:"name" validate:"required"`
+	Address   string `json:"address"`
+	Username  string `json:"username" validate:"required"`
+	Email     string `json:"email,omitempty" validate:"required,email"`
+	Password  string `json:"password" validate:"required"`
+	CreatedBy uuid.UUID
+}
+
+// INTERNAL
+type InternalSignUp struct {
+	Name         string `json:"name" validate:"required"`
+	Address      string `json:"address"`
+	Username     string `json:"username" validate:"required"`
+	Email        string `json:"email" validate:"required,email"`
+	Password     string `json:"password" validate:"required"`
+	Phone        string `json:"phone"`
+	ProfileImage string `json:"profileImage"`
 }
 
 type UserUpdate struct {
-	ID        uuid.UUID `json:"id"`
-	Name      string    `json:"name,omitempty" validate:"required"`
-	Address   string    `json:"address"`
-	Username  string    `json:"username,omitempty" validate:"required"`
-	Email     string    `json:"email" validate:"required,email"`
-	Role      string    `json:"role" validate:"required"`
-	Status    string    `json:"status" validate:"required"`
-	CompanyID string    `json:"companyId" binding:"required" validate:"required,uuid4"`
+	ID           uuid.UUID `json:"id"`
+	Name         string    `json:"name,omitempty" validate:"required"`
+	Address      string    `json:"address"`
+	Username     string    `json:"username,omitempty" validate:"required"`
+	Email        string    `json:"email" validate:"required,email"`
+	Phone        string    `json:"phone"`
+	ProfileImage string    `json:"profileImage"`
+	Status       string    `json:"status" validate:"required"`
 }
 
 type RetrieveUserInfo struct {
-	Name      string `json:"name,omitempty" validate:"required"`
-	Address   string `json:"address"`
-	Username  string `json:"username,omitempty" validate:"required"`
-	Email     string `json:"email" validate:"required"`
-	Password  string `json:"password,omitempty" validate:"required"`
-	CreatedBy models.User
-	UpdatedBy models.User
+	Name     string `json:"name,omitempty" validate:"required"`
+	Address  string `json:"address"`
+	Username string `json:"username,omitempty" validate:"required"`
+	Email    string `json:"email" validate:"required"`
+	Password string `json:"password,omitempty" validate:"required"`
+	Role     string `json:"role" validate:"required"`
 }
